tests/base/invalid/SetComprehension_CompileFail_2.whiley
void System::main([string] args):
    xs = 1
    zs = { x | y ∈ xs }
    this.out.println(str(xs))
    this.out.println(str(zs))
